--- a/Data/Scripts/TestScript/script.csproj
+++ b/Data/Scripts/TestScript/script.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrainHurtJuice.cs" />
     <Compile Include="HydrogenGenerators.cs" />
     <Compile Include="HydrogenTanksHaveMass.cs" />
     <Compile Include="ModAPISample.cs" />
