--- a/medbay/medbay.csproj
+++ b/medbay/medbay.csproj
@@ -2,5 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Textures\GUI\Icons\Cubes\medbay\" />
+  </ItemGroup>
   <Import Project="../paths.props" />
 </Project>
