--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -20,6 +20,43 @@ FROM mcr.microsoft.com/vscode/devcontainers/dotnet:0-3.1
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends mono-devel
 
+
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+    file \
+    xz-utils \
+    libc6-i386 \
+    make \
+    gnupg \
+    libgl1 \
+    libxtst6 \
+    libxrandr2 \
+    libglib2.0-0 \
+    libgtk2.0-0 \
+    libpulse0 \
+    libva2 \
+    libbz2-1.0 \
+    libvdpau1 \
+    libva-x11-2 \
+    libcurl4-gnutls-dev \
+    libopenal1 \
+    libsm6 \
+    libice6 \
+    libasound2-plugins \
+    libsdl2-image-2.0-0 \
+    dbus \
+    dbus-x11 \
+    pulseaudio \
+    pciutils \
+    zenity \
+    libopenal1 \
+    bumblebee bumblebee-nvidia primus linux-headers-generic
+    
+# insall steam
+RUN TEMP_DEB="$(mktemp --suffix=.deb)" \
+    && wget -O "$TEMP_DEB" https://cdn.cloudflare.steamstatic.com/client/installer/steam.deb \
+    && apt-get -y install --no-install-recommends  "$TEMP_DEB" \
+    && rm -f "$TEMP_DEB"
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
 COPY --from=download /server /server
